# gnome-voice-input

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.claude/: settings.local.json
config/: default.toml
examples/: simple-transcriber.rs  test-transcription.rs
src/: app_manager.rs  audio.rs  audio_utils.rs  config.rs  config_watcher.rs  hotkey.rs  keyboard.rs  lib.rs  main.rs  state.rs  test_transcription.rs  transcription.rs  transcription_utils.rs  tray.rs
src/handlers/: console_handler.rs  keyboard_handler.rs  mod.rs  transcription_handler.rs
